Modal expands to full width on mobile now. Issue #90.

--- a/less/app.less
+++ b/less/app.less
@@ -349,7 +349,7 @@ footer {
 	}
 
 	.modal-dialog {
-		width: 80%;
+		width: 100%;
 	}
 
 	.text {
